[package]
name = "openxr-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38.0" # Same version as vulkano
openxr = { version = "^0.19.0", features = ["loaded"]}
vulkano = { git = "https://github.com/vulkano-rs/vulkano", rev = "cd4603b" } # Require a more up-to-date version than 0.34.1 to support properly OpenXR interop
vulkano-macros = "0.34.0"
vulkano-shaders = "0.34.0"
