[package]
name = "openxr-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38.0" # Same version as vulkano
glam = { version = "0.29.0", features = ["bytemuck"] }
openxr = { path = "../openxrs/openxr", features = ["loaded"] }
vulkano = { git = "https://github.com/vulkano-rs/vulkano", rev = "cd4603b" } # Require a more up-to-date version than 0.34.1 to support properly OpenXR interop
vulkano-macros  = { git = "https://github.com/vulkano-rs/vulkano", rev = "cd4603b" }
vulkano-shaders  = { git = "https://github.com/vulkano-rs/vulkano", rev = "cd4603b" }

[[example]]
name = "android"
crate-type = ["cdylib"]
path = "src/main.rs"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
ndk-glue = "0.7.0"
jni = "0.21.1"

# The following manifest metadata is used by cargo-apk to configure the example Android app for the Oculus Quest 1 and Quest 2.
[package.metadata.android]
package = "fr.djefrey.openxr_tests"
apk_name = "openxr-tests"
build_targets = ["aarch64-linux-android"]
runtime_libs = "libs"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 34

[package.metadata.android.application.activity]
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
    "com.oculus.intent.category.VR",
    "android.intent.category.LAUNCHER",
]

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.PASSTHROUGH"
required = true
version = 1

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.BOUNDARYLESS_APP"
required = true
version = 1

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.HAND_TRACKING"

# This signals to the Quest 2 / 3 to use the hand tracking (otherwise it will only work for a single frame)
[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = true
version = 1

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.USE_SCENE"
